add area calculate by Simpsons and monte carlo method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Numerical_methods)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Numerical_methods main.cpp num_methods.cpp num_methods.h vect.cpp vect.h matrix.cpp matrix.h)
+add_executable(Numerical_methods main.cpp num_methods.cpp num_methods.h vect.cpp vect.h matrix.cpp matrix.h geometry.cpp geometry.h)
